--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
         background-color: white;
 	padding: 35px;
       }
+      a {
+          text-decoration: none;
+      }
       p {
         font-family: Arial, Helvetica, sans-serif;
       }
@@ -72,14 +75,37 @@ span {
     <hr>
 
     <h3>
-        Project Two: (x)topia duet
+        <a href="http://art222.geekpower.com/project_2.html">Project Two: (x)topia duet</a>
     </h3>
+    <p>
+        In (x)topia my intention was to explore the concept of loops as we perceive them in space and time through the 
+        flat, rectangular confines of a collage assembled from found images. Was I successful? Not entirely. But you can
+        see for yourself <a href="http://art222.geekpower.com/project_2.html">here</a>
+    </p>
 
     <hr>
 
 	<h3>
-		Project Three: Under the Galaxy (tonight)
+		<a href="http://art222.geekpower.com/project_3.html">Project Three: Under the Galaxy (tonight)</a>
 	</h3>
+    <p>
+        This found footage video project explores the theme of Yesterday's Tomorrow within the context of 1950s 
+        found footage of "kitchens of tomorrow" and the "future of space." It also explores what happens when
+        these images are recontextualized through the inclusion of music, in this case, a remix of two songs
+        which are both (loosely) thematically related to space. Exprience this 
+        <a href="http://art222.geekpower.com/project_3.html">here</a>
+    </p>
+
+    <hr>
+    <h3>
+        	<a href="http://art222.geekpower.com/project_4.html">Project Four: Gossen Luna Pro (3D)</a>
+    </h3>
+    <p>
+        This exploration of 3D design involves a 63 year old light meter  
+        <a href="https://camera-wiki.org/wiki/Gossen_Lunasix">(Gossen Luna Pro)</a>
+        and over 22 hours of mucking about in Blender. Though the mucking was very enjoyable. You can 
+        see the outcome <a href="http://art222.geekpower.com/project_4.html">here</a>
+    </p>
 
    </body>
 </html>
