--- a/project_1.html
+++ b/project_1.html
@@ -39,6 +39,9 @@
         background-color: white;
 	padding: 35px;
       }
+      a {
+          text-decoration: none;
+      }
       p {
         font-family: Arial, Helvetica, sans-serif;
       }
@@ -54,8 +57,10 @@ span {
     </style>
   </head>
   <body>
+    <h1>Daniel G. Stephens - Artist's Journal</h1>
+    <a href="http://art222.geekpower.com/index.html">main</a>
+
     <hr>
-	  
     <h3>
       Project One: Southworth Planetarium Logo
     </h3>
