--- a/project_4.html
+++ b/project_4.html
@@ -1,1 +1,105 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Daniel G. Stephens ART222 Artist's Journal</title>
+    <style>
+      h1{
+        color: orange;
+        font-family: Futura, "Trebuchet MS", Arial, sans-serif; 
+        font-size: 24px; 
+        font-style: normal; 
+        font-variant: normal; 
+        font-weight: 700; 
+        line-height: 26.5px; 
+      } 
+      h2 { font-family: Futura, "Trebuchet MS", Arial, sans-serif; 
+          color: orange;
+          font-size: 20px; 
+          font-style: normal; 
+          font-variant: normal; 
+          font-weight: 700; 
+          line-height: 21.4px; 
+      }
+      h3 { font-family: Futura, "Trebuchet MS", Arial, sans-serif; 
+          font-size: 14px; 
+          font-style: normal; 
+          font-variant: normal; 
+          font-weight: 700; 
+          line-height: 15.4px; 
+      }
+    h6{
+	font-family: Futura, "Trebuchet MS", Arial, sans-serif; 
+	font-size: 10px;
+	font-style: normal;
+	line-height: 10.2px
+	font-weight: 200;
+    }
+      body {
+	font-family: Futura, "Trebuchet MS", Arial, sans-serif; 
+        background-color: white;
+	padding: 35px;
+      }
+      a {
+          text-decoration: none;
+      }      
+      p {
+        font-family: Arial, Helvetica, sans-serif;
+      }
+span {
+	font-family: Arial, Helvetica, sans-serif;
+}
+.image_text {
+	padding: 0px;
+	margin: 0px;
+	font-size: 10px;
+	font-weight: 200;
+}
+    </style>
+  </head>
+  <body>
+	  <h3>
+		  Project Three: Under the Galaxy (tonight)
+	  </h3>
+	  <p>
+		  Artist's reflection
+	  </p>
+	  <p>
+My original intent was to create as realistic a model of my beloved Gossen Luna Pro light meter as possible. I knew this was going to be a challenging assignment but I felt I was up to the task. I'd just done eight hours of Blender tutorials - I should know everything one could possibly know about building a realistic 3D object in Blender. Well, clearly this isn't the case. Blender is blindingly complex - and that complexity is its super power. But I also found it amazingly approachable, which was unexpected. And this "approachability" led me to believe that I could whip up a Gossen Luna Pro in a few hours of head-down modeling. Um. No. I spent about 22 hours building this model and it isn't half as detailed as I had hoped/imagined it would be. 
 
+</p>
+
+I felt that its glossy plastic in mostly gray and silver tones would be relatively easy to model leaving lots of time to play with the setting, the lighting, and camera placement - the things I was truly excited to explore. But the Gossen had other intentions. It proved to be a beautifully complex shape of seemingly straight edges that are all slightly beveled and curved in subtle ways and required an enormous amount of time to get even passably close to. 
+
+Here is my Gossen Luna Pro hanging out inside of Blender:
+
+Gossen Luna Pro light meter rendered in Blender
+
+[Gossen Luna Pro three-quarter frontal view]
+
+I rendered the light meter with two main light sources, a keylight from the front right-side and a fill near the camera. I recreated the meter face (where the yellow number bars are) in Illustrator and applied three different images (one each for the yellow number strips since they are inset in the face, and one for the silver face itself) as texture maps to surfaces that I embedded into the model. The needed is a thin cubic rectangle with a metallic material applied. 
+
+Gossen Luna Pro light meter rendered in Blender
+
+[Gossen Luna Pro from a three-quarter back perspective]
+
+In this image you can see the shiny, specular nature of the meter's top dial. I had wanted to recreate this dial in Illustrator and import it as a texture map, but to save time I cut out the dial section from a top-down photograph of my meter and applied it as a texture map to the top of a very short cylinder and then imbedded that into the top dial structure.
+
+Real Gossen Luna Pro light meter
+
+["Real" Gossen Luna Pro]
+
+As an comparison, above is my Gossen Luna Pro which graciously allowed me to poke and prod and look very closely at it for hours on end while I built its model in Blender. (Thank you Luna Pro).
+
+Gossen Luna Pro light meter rendered in Blender
+
+[Gossen Luna Pro]
+
+This side reveals a terrible secret. The top part of the body (the body is three parts bottom, middle, top) is not shaded smooth, but instead was left shaded flat. You can see it on the back left top corner - those little vertical lines. This is because there are some tricky mesh issues with the top part of the body because of how I made it. The bottom didn't suffer this issues as I made it after the top, from which I learned a lot.
+
+Gossen Luna Pro light meter rendered in Blender
+
+[Gossen Luna Pro - top body shaded smooth showing mesh errors]
+
+Above is the top part of the body shaded smooth. You can see the glitches in the front right corner. This is because there are faces with too many vertices and that confuses the Blender shader. It also confused the heck out of me and thus I wasn't able to fix them. If I were to do this again, I'd use my method for creating the bottom part of the case for the top as well as it created a much more stable model.
+
+In the end I accomplished much of what I had wanted to do. I learned a great deal about Blender, about modeling objects and about myself. I really enjoy this workflow. As a filmmaker and interactive sculptor, there are lots of steps in the 3D modeling process that really click for me. One aspect that I really enjoyed was simply the process of problem-solving in a low-stakes environment. I also feel as though this project changed the way I look at objects; I've always admired simple, elegant design, but studying an object so closely has given me a new sets of eyes and a new experience of looking.
