--- a/project_3.html
+++ b/project_3.html
@@ -39,6 +39,9 @@
         background-color: white;
 	padding: 35px;
       }
+      a {
+          text-decoration: none;
+      }      
       p {
         font-family: Arial, Helvetica, sans-serif;
       }
