--- a/project_2.html
+++ b/project_2.html
@@ -109,7 +109,7 @@ span {
 		  chair atop a shag blue throw, comfortable, confident, excited about what shiny new thing will come next. 
 		  This scene is the inner space of the new shiny loop.
 	  </p>
-	  <img src="(x)topia_one_pre.png" width="80%" alt="(x)topia one [unfinished]">
+	  <img src="/images/(x)topia_one_pre.png" width="80%" alt="(x)topia one [unfinished]">
 	  <div class="image_text">(x)topia one</div>
 	  <p>
 		  	Happy with the utopia I started work on the dystopia. It needed to be everything the utopia wasn’t, 
@@ -119,7 +119,7 @@ span {
 		  that exudes old, musty, dark living room vibes. They’re older, sad, lost. The technology they use to 
 		  ‘jack in’ is clunky and cumbersome. This scene is the existential reality of the loop.
 	  </p>
-	  <img src="(x)topia_two_fourthree.png" width="80%" alt="(x)topia two">
+	  <img src="/images/(x)topia_two_fourthree.png" width="80%" alt="(x)topia two">
 	  <div class="image_text">(x)topia two</div>
 	  <p>
 		  	As I finished the dystopia I realized that in fact, it wasn’t really all that terrible of a place. 
@@ -129,7 +129,7 @@ span {
 		  I was no longer sure which was which. The utopia had somehow devolved into a shiny proto-dystopia and 
 		  the dystopia had evolved into a well-worn, musty proto-utopia. 
 	  </p>
-	  <img src="(x)topia_one.png" width="80%" alt="(x)topia one">
+	  <img src="/images/(x)topia_one.png" width="80%" alt="(x)topia one">
 	  <div class="image_text">(x)topia one [finished]</div>
 	  <p>
 		  They had both crossed a threshold and contained shared DNA that bridged the gulf between utopia 
