tweaked top of project files

--- a/project_2.html
+++ b/project_2.html
@@ -57,6 +57,8 @@ span {
     </style>
   </head>
   <body>
+    <h1>Daniel G. Stephens - Artist's Journal</h1>
+    <a href="http://art222.geekpower.com/index.html">main</a>
 	  <hr>
 	  <h3>
 		  Project Two: (x)topia duet
