--- a/project_4.html
+++ b/project_4.html
@@ -57,6 +57,9 @@ span {
     </style>
   </head>
   <body>
+    <h1>Daniel G. Stephens - Artist's Journal</h1>
+    <a href="http://art222.geekpower.com/index.html">main</a>
+    <hr>
 	  <h3>
 		  Project Three: Under the Galaxy (tonight)
 	  </h3>
