fixed project_3 images and divs

--- a/project_3.html
+++ b/project_3.html
@@ -86,7 +86,7 @@ span {
 	  <iframe width="560" height="315" src="https://www.youtube.com/embed/Q--YZ30HqDo?si=6T4uCOmCq-28VehL" title="YouTube video player" 
 		  frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
 		  referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-		 <div>[Under the Galaxy (tonight)]</div>
+		 <div class="image_text">[Under the Galaxy (tonight)]</div>
 	 </p>
 	  <p>
 		  My core concept for this project was to build a short film made of found footage that took the 
@@ -98,12 +98,12 @@ span {
 		  in space. 
 	  </p>
 	  <p>
-		<img src="ChevroletPresentsKitchen1958.png" width="80%" alt="Chevrolet Presents American Look 1958">
-		<div>[Chevrolet Presents American Look 1958 - Kitchen of tomorrow.]</div>
+		<img src="/images/ChevroletPresentsKitchen1958.png" width="80%" alt="Chevrolet Presents American Look 1958">
+		<div class="image_text">[Chevrolet Presents American Look 1958 - Kitchen of tomorrow.]</div>
   	  </p>
 	  <p>
-		  <img src="GeneralMotorsKitchen1956.png" width="80%" alt="General Motors 1956">
-		  <div>[General Motors’ Design for Dreaming 1956 - Kitchen of tomorrow]</div>
+		  <img src="/images/GeneralMotorsKitchen1956.png" width="80%" alt="General Motors 1956">
+		  <div class="image_text">[General Motors’ Design for Dreaming 1956 - Kitchen of tomorrow]</div>
 	  </p>
 	 <p>
 		  I also sought a soundtrack for the piece that would provide both a tempo and a commentary 
@@ -115,13 +115,13 @@ span {
 		  <iframe width="560" height="315" src="https://www.youtube.com/embed/PE1ges9nn6A?si=FHRjvBHTi_7du1dm" 
 			  title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; 
 			  encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-		  <div>[Laura Veirs Galaxies on YouTube]</div>
+		  <div class="image_text">[Laura Veirs Galaxies on YouTube]</div>
 	  </p>
 	  <p>
 		  <iframe width="560" height="315" src="https://www.youtube.com/embed/pWxJEIz7sSA?si=4pR5RapomsV80V5_" 
 			  title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; 
 			  encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-		  <div>[The Church’s Under the Milkyway Tonight on YouTube]</div>
+		  <div class="image_text">[The Church’s Under the Milkyway Tonight on YouTube]</div>
 	  </p>
 	  <p>
 		  In their reimagined form the two songs intermingle to form a unified whole that both narrates and 
@@ -134,8 +134,8 @@ span {
 		  to the left and right of the 4:3 frame. 
 	  </p>
 	  <p>
-		  <img src="16x9_extra_stuff_crossed_fingers.png" width="80%" alt="Text in the pillar box area">
-		  <div>[There could be commentary text in the pillar box area]</div>
+		  <img src="/images/16x9_extra_stuff_crossed_fingers.png" width="80%" alt="Text in the pillar box area">
+		  <div class="image_text">[There could be commentary text in the pillar box area]</div>
 	  </p>
 	<p> 	  
 		  Our modern eyes are used to seeing a 16:9 frame, and YouTube 
