--- a/project_4.html
+++ b/project_4.html
@@ -1,60 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
+  <link rel="stylesheet" href="styles.css">
+
+
     <title>Daniel G. Stephens ART222 Artist's Journal</title>
-    <style>
-      h1{
-        color: orange;
-        font-family: Futura, "Trebuchet MS", Arial, sans-serif; 
-        font-size: 24px; 
-        font-style: normal; 
-        font-variant: normal; 
-        font-weight: 700; 
-        line-height: 26.5px; 
-      } 
-      h2 { font-family: Futura, "Trebuchet MS", Arial, sans-serif; 
-          color: orange;
-          font-size: 20px; 
-          font-style: normal; 
-          font-variant: normal; 
-          font-weight: 700; 
-          line-height: 21.4px; 
-      }
-      h3 { font-family: Futura, "Trebuchet MS", Arial, sans-serif; 
-          font-size: 14px; 
-          font-style: normal; 
-          font-variant: normal; 
-          font-weight: 700; 
-          line-height: 15.4px; 
-      }
-    h6{
-	font-family: Futura, "Trebuchet MS", Arial, sans-serif; 
-	font-size: 10px;
-	font-style: normal;
-	line-height: 10.2px
-	font-weight: 200;
-    }
-      body {
-	font-family: Futura, "Trebuchet MS", Arial, sans-serif; 
-        background-color: white;
-	padding: 35px;
-      }
-      a {
-          text-decoration: none;
-      }      
-      p {
-        font-family: Arial, Helvetica, sans-serif;
-      }
-span {
-	font-family: Arial, Helvetica, sans-serif;
-}
-.image_text {
-	padding: 0px;
-	margin: 0px;
-	font-size: 10px;
-	font-weight: 200;
-}
-    </style>
   </head>
   <body>
     <h1>Daniel G. Stephens - Artist's Journal</h1>
