fixed google drive links

--- a/project_2.html
+++ b/project_2.html
@@ -108,7 +108,7 @@
 
       <h4>
             You can download, view, and edit all of the Adobe Photoshop files for this project 
-            <https://drive.google.com/drive/folders/1qHUtC-7YzM2EWm1rmvMbhH7eVribJ6Ds?usp=drive_link>here</a>
+            <a href=-"https://drive.google.com/drive/folders/1qHUtC-7YzM2EWm1rmvMbhH7eVribJ6Ds?usp=drive_link">here</a>
       </h4>
 	  
    </body>
