open google drive link in new tab

--- a/project_1.html
+++ b/project_1.html
@@ -94,7 +94,7 @@
 	    
 <h4>	    
     You can download and view all the Adobe Illustrator files for this project
-    <a href="https://drive.google.com/drive/folders/1bIjNVzmlWnrCidKGRP_1Pj6XCqXYUXig?usp=sharing">here</a>.
+    <a href="https://drive.google.com/drive/folders/1bIjNVzmlWnrCidKGRP_1Pj6XCqXYUXig?usp=sharing" target="_blank">here</a>.
 </h4>
 
 
