--- a/project_4.html
+++ b/project_4.html
@@ -93,7 +93,7 @@
 
         <h4>
             You can download, view, edit, and play with the blender file, textures and reference images 
-            <a href="https://drive.google.com/drive/folders/1Hq9BoYaVrjPau59VpxhDYxHeYFLODwa4?usp=drive_link">here</a>
+            <a href="https://drive.google.com/drive/folders/1Hq9BoYaVrjPau59VpxhDYxHeYFLODwa4?usp=drive_link" target="_blank">here</a>
         </h4>
     </body>
 </html>
